--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-#Data Source Properties
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ownwebsite?useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-spring.datasource.username=root
-spring.datasource.password=verySecret#1
-#JPA Properties
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.format_sql=TRUE
-spring.jpa.properties.hibernate.show_sql=TRUE
+logging.level.org.hibernate.SQL=DEBUG
+
+spring.datasource.url=jdbc:mysql://notkaloyan-db.mysql.database.azure.com:3306/ownwebsite?serverTimezone=UTC
+spring.datasource.username=notkaloyan
+spring.datasource.password=Mishoebokluk#1
+
+
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
 server.port=8000
