--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-ai-anomalydetector</artifactId>
+			<version>3.0.0-beta.5</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
